--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         </ul>
       </div>
     </div>
-  </nav> 
+  </nav>
 
   <section class="page-section about-heading">
     <div class="container">
@@ -84,7 +84,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2017</p>
+      <p class="m-0 small">Copyright &copy; Lea'Anna Liv</p>
     </div>
   </footer>
 
