--- a/products.html
+++ b/products.html
@@ -25,10 +25,10 @@
 
 <body>
 
- <h1 class="site-heading text-center text-white d-none d-lg-block">
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Mental Health Therapist</span>
     <span class="site-heading-lower">Lea'Anne Liv</span>
-  </h1> 
+  </h1>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -157,7 +157,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2017</p>
+      <p class="m-0 small">Copyright &copy; Lea'Anna Liv</p>
     </div>
   </footer>
 
