--- a/store.html
+++ b/store.html
@@ -28,7 +28,7 @@
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Mental Health Therapist</span>
     <span class="site-heading-lower">Lea'Anne Liv</span>
-  </h1> 
+  </h1>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -101,12 +101,12 @@
             <p class="address mb-5">
               <em>
                 <strong>1116 Orchard Street</strong>
-                <br> Golden Valley, Minnesota
+                <br> Tacoma, Washington
               </em>
             </p>
             <p class="mb-0">
               <small>
-                <em>Call Anytime</em>
+                <em>By appointment only</em>
               </small>
               <br> (317) 585-8468
             </p>
@@ -114,7 +114,7 @@
         </div>
       </div>
     </div>
-  </section> 
+  </section>
 
   <!-- I offer ongoing one-on-one psychotherapy to individuals who are 18 years and up. 
   Sessions are 45-50 minutes per session at $100 
@@ -176,12 +176,15 @@
               <p class="mb-0">
                 All patients must be 18 years or older.
                 <br/> At this time I do not see families or couples.
-                <br/><br/> At this time I do not accept insurance. Therapy can be expensive, but it is worth the investment, Here are
+                <br/>
+                <br/> At this time I do not accept insurance. Therapy can be expensive, but it is worth the investment, Here are
                 a couple options:
-                <br/><br/> Out-of-network benefits: Contact your insurance company and ask how much they'll reimburse for therapy provided
+                <br/>
+                <br/> Out-of-network benefits: Contact your insurance company and ask how much they'll reimburse for therapy provided
                 by an out-of-network LICSW-A (licenses clinical social worker associate) After you pay me directly, I will
                 provide you with a receipt that you can submit to your insurance company for reimbursement,
-                <br/><br/> Private pay- This means that you would be required to pay upfront. I will request that you have a card on
+                <br/>
+                <br/> Private pay- This means that you would be required to pay upfront. I will request that you have a card on
                 file so that I can omit the hassle of collecting payment after our session is completed. I will automatically
                 charge your card upon completion of the session.
               </p>
@@ -195,7 +198,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2017</p>
+      <p class="m-0 small">Copyright &copy; Lea'Anna Liv</p>
     </div>
   </footer>
 
