--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2017</p>
+      <p class="m-0 small">Copyright &copy; Lea'Anna Liv</p>
     </div>
   </footer>
 
